[B]Retrospect v5.6.x - Changelog - 2023-xx-xx[/B]

t.b.d.

[B]Framework related[/B]
* Added: IPTV Manager support (See #1674).
* Fixed: Minor logging in issue for NPO.

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Fixed: RTV Drenthe playback.
* Changed: Switched to the VRT MAX Add-on for now for VRT NU/MAX.
* Fixed: Kijk.nl subtitle issue with image url's instead of text (Fixes #1705).
* Fixed: RTL XL broke due to API changes.